--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>exercicio01</title>
 </head>
 <body>
-    <a href = "https://www.fiap.com.br">"Site da FIAP"</a>
+    <a href = "https://www.fiap.com.br">Site da FIAP</a>
+    <br>
+    <br>
+    <img src="imagem/logotipo.jpg" alt="logotipo usado" width="100" height="100">
+    <br>
+    <a href = "paginas/Kit e Cestas.html">Kit e Cestas</a>
+    <br>
+    <a href = "paginas/Mercearia.html">Mercearia</a>
+    <br>
+    <a href = "paginas/Por País.html">Por País</a>
+    <br>
+    <a href = "paginas/Por tipo.html">Por tipo</a>
+    <br>
+    <a href = "paginas/Quem Somos.html">Quem Somos</a>
     
 </body>
 </html>
